--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
 												<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 7.89a2 2 0 002.83 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
 											</svg>
 											<span class="text-gray-300 text-base sm:text-lg font-medium mr-2 sm:mr-3">投诉邮箱：</span>
-											<a href="mailto:troll@pissmail.com" class="text-blue-400 hover:text-blue-300 transition-colors text-base sm:text-lg font-medium break-all">troll@pissmail.com</a>
+											<a href="mailto:troll@pissmail.com" class="text-blue-400 hover:text-blue-300 transition-colors text-base sm:text-lg font-medium break-all">k@kkk.icu</a>
 										</div>
 									</div>
 									<p class="text-gray-300 text-base sm:text-lg leading-relaxed">
